--- a/lib/Xamarin.Forms.Vonage.iOS/Xamarin.Forms.Vonage.iOS.csproj
+++ b/lib/Xamarin.Forms.Vonage.iOS/Xamarin.Forms.Vonage.iOS.csproj
@@ -55,7 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms">
-      <Version>5.0.0.2337</Version>
+      <Version>5.0.0.2515</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Vonage.iOS">
       <Version>2.21.3</Version>
@@ -66,6 +66,9 @@
       <Project>{B7C1C664-7BEA-4419-81D3-C1A170D652FD}</Project>
       <Name>Xamarin.Forms.Vonage</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Info.plist" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
