--- a/Vonage.nuspec
+++ b/Vonage.nuspec
@@ -15,13 +15,13 @@
     <tags>vonage, opentok, tokbox, videochat, video, chat, video streaming, xamarin forms, audio</tags>
     <dependencies>
       <group>
-        <dependency id="Xamarin.Forms" version="5.0.0.2337" />
+        <dependency id="Xamarin.Forms" version="5.0.0.2515" />
       </group>
       <group targetFramework="Xamarin.iOS10">
         <dependency id="Xamarin.Vonage.iOS" version="2.21.3" />
       </group>
-      <group targetFramework="MonoAndroid10">
-        <dependency id="Xamarin.Vonage.Android" version="2.21.3" />
+      <group targetFramework="MonoAndroid12">
+        <dependency id="Xamarin.Vonage.Android" version="2.21.5" />
       </group>
       <group targetFramework="netstandard20" />
     </dependencies>
@@ -38,10 +38,10 @@
     <file src="lib\Xamarin.Forms.Vonage\bin\Release\netstandard2.0\Xamarin.Forms.Vonage.pdb" target="lib\netstandard2.0\Xamarin.Forms.Vonage.pdb" />
 
     <!--Xamarin.Android-->
-    <file src="lib\Xamarin.Forms.Vonage\bin\Release\netstandard2.0\Xamarin.Forms.Vonage.dll" target="lib\MonoAndroid10\Xamarin.Forms.Vonage.dll" />
-    <file src="lib\Xamarin.Forms.Vonage\bin\Release\netstandard2.0\Xamarin.Forms.Vonage.pdb" target="lib\MonoAndroid10\Xamarin.Forms.Vonage.pdb" />
-    <file src="lib\Xamarin.Forms.Vonage.Android\bin\Release\Xamarin.Forms.Vonage.Android.dll" target="lib\MonoAndroid10\Xamarin.Forms.Vonage.Android.dll" />
-    <file src="lib\Xamarin.Forms.Vonage.Android\bin\Release\Xamarin.Forms.Vonage.Android.pdb" target="lib\MonoAndroid10\Xamarin.Forms.Vonage.Android.pdb" />
+    <file src="Lib\Xamarin.Forms.Vonage\bin\Release\netstandard2.0\Xamarin.Forms.Vonage.dll" target="lib\MonoAndroid12\Xamarin.Forms.Vonage.dll" />
+    <file src="Lib\Xamarin.Forms.Vonage\bin\Release\netstandard2.0\Xamarin.Forms.Vonage.pdb" target="lib\MonoAndroid12\Xamarin.Forms.Vonage.pdb" />
+    <file src="Lib\Xamarin.Forms.Vonage.Android\bin\Release\Xamarin.Forms.Vonage.Android.dll" target="lib\MonoAndroid12\Xamarin.Forms.Vonage.Android.dll" />
+    <file src="Lib\Xamarin.Forms.Vonage.Android\bin\Release\Xamarin.Forms.Vonage.Android.pdb" target="lib\MonoAndroid12\Xamarin.Forms.Vonage.Android.pdb" />
 
     <!--Xamarin.iOS-->
     <file src="lib\Xamarin.Forms.Vonage\bin\Release\netstandard2.0\Xamarin.Forms.Vonage.dll" target="lib\Xamarin.iOS10\Xamarin.Forms.Vonage.dll" />
